     shutdown triggers. Also, notification was added to report "finished
     calibration". [issue #2168, PR #2169]
   * `upsmon` support for `POLLFAIL_LOG_THROTTLE_MAX` did not neuter the
     applied setting when live-reloading configuration, so commenting it
     away in `upsmon.conf` did not have the effect of resetting the logging
     frequency to default. [#2207]
   * `upsmon` support for `POLLFAIL_LOG_THROTTLE_MAX` had an off-by-one error
     (e.g. reporting "Data stale" or "Driver not connected" every 30 sec with
     `POLLFAIL_LOG_THROTTLE_MAX 5` and `POLLFREQ 5` settings). [#2207]
   * Drivers running with non-default user account (e.g. with `user=root`
     in their configuration) failed to apply group ownership and permissions
     to their Unix socket file for interaction with the local data server.
     [#2185, #2096]
   * Dispatcher script `scripts/python/app/NUT-Monitor` referenced `py3qt3`
     instead of the correct `py3qt5`. It also tries to check both `py2gtk2`
     and `py3qt5` implementations verbosely, even if one is not installed.
     [#2199, #2201]
   * Set the `DesktopFileName` in `scripts/python/app/NUT-Monitor-py3qt5`,
     this binds the application with the desktop file and allow the Desktop
     implementation to display the proper icon and application name. [#2205]

 - nut-usbinfo.pl, nut-scanner and libnutscan:
   * USB VendorID:ProductID support list files generated by the script for
     different OS frameworks now include a comment with other possibly
     compatible driver names, where the respective file format allows for
     comments.
   * Added the concept of `alt_driver_names` in `nutscan_device_t` structure
     for ability to suggest a comment with other possibly compatible driver
     names in configuration snippets generated by `nut-scanner`; practical
     support implemented for USB connected drivers. Library API version
     bumped to 2.3.0 accordingly.